force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Interest_Withdrawal_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Withdrawal_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, accrued earnings are required to be distributed out of the account. If disabled, this field is not used. By default, it is disabled.</description>
    <inlineHelpText>If true accrued earnings are required to be distributed out of the account.</inlineHelpText>
    <label>Interest Withdrawal Required</label>
    <type>Checkbox</type>
</CustomField>