force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__IRA_Plan_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Plan_Fee_Type__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the type of the fee associated with the IRA plan.</description>
    <inlineHelpText>Specifies the type of the fee associated with the IRA plan.</inlineHelpText>
    <label>IRA Plan Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Establishment Fee</fullName>
            </value>
            <value>
                <fullName>Annual Service/Administration Fee</fullName>
            </value>
            <value>
                <fullName>Transfer/Direct Rollover Fee</fullName>
            </value>
            <value>
                <fullName>Termination Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>