force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Budget_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected. This checkbox is used to specifie a product feature that specifies a product as using the budgets feature. When enabled, the Budget route and subroutes appear in the nCino UI. When disabled, they do not appear. This field is disabled by default.</description>
    <label>Is Budget</label>
    <type>Checkbox</type>
</CustomField>