force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Bundle__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required and is manually populated. When true, it denotes whether a product is part of a treasury service bundle. When products are part of a bundle, they are all added simultaneously whenever one is added.</description>
    <label>Is Bundle</label>
    <type>Checkbox</type>
</CustomField>