force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Debit_Card__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Debit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This data indicates that the customer is requesting a debit card rather than an ATM card. By selecting this option, additional data is collected surrounding debit card names, policies and liability. This checkbox field must be selected if the product is a debit card. The field is configured when setting up available ancillary services.</description>
    <label>Is Debit Card</label>
    <type>Checkbox</type>
</CustomField>