force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Demand_Note__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Demand_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to indicate a product feature that specifies a if product is a demand note / has a demand feature.</description>
    <inlineHelpText>Indicates if product is a demand note / has a demand feature.</inlineHelpText>
    <label>Is Demand Note</label>
    <type>Checkbox</type>
</CustomField>