force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Disbursement_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Disbursement_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required and is manually populated. When true, it denotes whether a product is a disbursement treasury service.</description>
    <label>Is Disbursement Service</label>
    <type>Checkbox</type>
</CustomField>