force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Joint_Credit_Protection_Coverage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Joint_Credit_Protection_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this optional checkbox field to indicate coverage is applied to multiple applicants. By default, it is false.</description>
    <inlineHelpText>Select this checkbox to indicate the credit protection product(s) covers multiple applicants.</inlineHelpText>
    <label>Is Joint Credit Protection Coverage</label>
    <type>Checkbox</type>
</CustomField>