force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Lease__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Lease. This information is used to display the asset route on loan and product package navigation. When disabled, a loan with that product feature does not show the asset route. By default, it is disabled.</description>
    <label>Is Lease</label>
    <type>Checkbox</type>
</CustomField>