force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Letter_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Letter_of_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Letter of Credit. When disabled, it is used as a flag to say the product is not a Letter of Credit. By default, it is disabled. No logic is run on this field.</description>
    <label>Is Letter of Credit</label>
    <type>Checkbox</type>
</CustomField>