force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Non_Revolving__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Non_Revolving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Non-revolving Line of Credit. When disabled, it is used as a flag to say the product is not a Non-revolving Line of Credit. By default, it is disabled. No logic is run on this field.</description>
    <label>Is Non Revolving</label>
    <type>Checkbox</type>
</CustomField>