force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Rate_Sheet_Pricing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Rate_Sheet_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admins select this boolean field if the product should be included in the Rate Sheet Pricing experience. By default, it is false.</description>
    <label>Is Rate Sheet Pricing</label>
    <type>Checkbox</type>
</CustomField>