force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Standby__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Standby__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required and is manually populated. This field is only used as a data point currently. A standby letter of credit (SLOC) is a guarantee of payment issued by a bank on behalf of a client that is used as &quot;payment of last resort&quot; should the client fail to fulfill a contractual commitment with a third party.</description>
    <label>Is Standby</label>
    <type>Checkbox</type>
</CustomField>