force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Subject_To_TRID_Tolerances__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Subject_To_TRID_Tolerances__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional checkbox to indicate a loan originated from this product hierarchy is subject to TRID tolerances. By default, this field is deselected.</description>
    <inlineHelpText>Select this checkbox if the loan is subject to TRID tolerances.</inlineHelpText>
    <label>Subject To TRID Tolerances</label>
    <type>Checkbox</type>
</CustomField>