force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Sublimit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Sublimit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected. When enabled, it specifies a product feature that specifies a product as a Sublimit (the 3rd level in a multi-tier loan structure, under Limit). This information is used to determine how to display product hierarchies visually. When disabled, it is not used. By default, it is disabled.</description>
    <label>Is Sub Limit</label>
    <type>Checkbox</type>
</CustomField>