force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Is_Syndication_Member__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Syndication_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required and is manually populated. When true, this field indicates that the product this product feature is for is a syndicated loan (which is a bank facility that is offered by a group of lenders). Additionally, it indicates that the financial institution this product feature is for is a contribituing member of the syndicated loan, but not the primary agent.</description>
    <label>Is Syndication Member</label>
    <type>Checkbox</type>
</CustomField>