force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Matrix_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Matrix_Calculation_Method__c</fullName>
    <description>Administrator populates this picklist to determine which pricing method will be associated for the loan product.</description>
    <inlineHelpText>Select the matrix calculation method of the associated loan.</inlineHelpText>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rule Engine</fullName>
                <default>true</default>
                <label>Rule Engine</label>
            </value>
            <value>
                <fullName>Matrix Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>