force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Maximum_Rate_Increase__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Rate_Increase__c</fullName>
    <description>The administrator populates this optional field with the maximum value the interest rate may increase from the specified teaser rate during the term of the loan.</description>
    <inlineHelpText>This field displays the maximum value the interest rate may increase from the specified teaser rate during the term of the loan.</inlineHelpText>
    <label>Maximum Rate Increase</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>