force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Minimum_Balance_Tiered_Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Balance_Tiered_Account__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low end dollar amount for a given tier.</description>
    <inlineHelpText>The amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low end dollar amount for a given tier.</inlineHelpText>
    <label>Minimum Balance Tiered Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>