force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Minimum_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Payment__c</fullName>
    <description>Use this optional currency field to sets a minimum payment amount.</description>
    <inlineHelpText>Use this optional currency field to sets a minimum payment amount.</inlineHelpText>
    <label>Minimum Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>