force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Minimum_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Rate__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It is the lowest interest rate that can apply to the account.</description>
    <inlineHelpText>The lowest interest rate that can apply to the account.</inlineHelpText>
    <label>Minimum Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>