force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__New_Loan_Additional_Fields__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Loan_Additional_Fields__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>tbd</description>
    <label>New Loan Additional Fields</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipName>Product_Features</relationshipName>
    <type>Lookup</type>
</CustomField>