force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Note_Advance_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Note_Advance_Type__c</fullName>
    <description>This picklist is used to indicate a product feature that specifies the advance type is used for a note.</description>
    <inlineHelpText>Specifies the advance type is used for a note.</inlineHelpText>
    <label>Note Advance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Advances</fullName>
            </value>
            <value>
                <fullName>Revolving Advances</fullName>
            </value>
            <value>
                <fullName>Non-Revolving Advances</fullName>
            </value>
            <value>
                <fullName>Reimbursement Advances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>