force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Notice_Account_Maturity_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Notice_Account_Maturity_Type__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the alternate maturity of an account if any. This only applies to notice accounts.</description>
    <inlineHelpText>Specifies the alternate maturity of an account if any. This only applies to notice accounts.</inlineHelpText>
    <label>Notice Account Maturity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Period</fullName>
            </value>
            <value>
                <fullName>No Alternate Maturity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>