force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Odd_Days_Anchor_Date_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Odd_Days_Anchor_Date_Method__c</fullName>
    <description>Administrators and users populate this optional picklist field to determine Odd Days Anchor Date Method. By default, it is blank.</description>
    <inlineHelpText>Choose an Anchor Date Method to determine how to arrive at the anchor date.</inlineHelpText>
    <label>Odd Days Anchor Date Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back Days Per Period</fullName>
            </value>
            <value>
                <fullName>Back Unit Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>