force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Other_Crediting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Crediting_Frequency__c</fullName>
    <description>This is the description of a non-standard crediting frequency such as every 45 days. The data will complete the sentence describing compounding frequency and the method by which earnings are paid. For example, &quot;Interest will be compounding daily and paid by check every 45 days.&quot;</description>
    <label>Other Crediting Frequency</label>
    <type>TextArea</type>
</CustomField>